--- a/Develop/index.html
+++ b/Develop/index.html
@@ -30,6 +30,9 @@
       </div>
     </div>
     <script src="script.js"></script>
-    <script src="https://randojs.com/1.0.0.js"></script>
-  </body>
+    <!-- <script src="https://randojs.com/1.0.0.js"></script> -->
+    <!-- <input type="text" id="password"/>
+    <button onclick="generateNewPassword();">Generate new password</button>
+  </body> -->
 </html>
+`
